<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="29dp"
        android:text="@string/name_first" />

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/firstNameText"
        android:layout_alignBottom="@+id/firstNameText"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/firstNameText"
        android:ems="10"
        android:inputType="text|textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameText"
        android:layout_below="@+id/firstNameEdit"
        android:layout_marginTop="30dp"
        android:text="@string/name_last" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lastNameText"
        android:layout_alignBottom="@+id/lastNameText"
        android:layout_alignLeft="@+id/firstNameEdit"
        android:ems="10"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emailEdit"
        android:layout_alignLeft="@+id/lastNameText"
        android:text="@string/email_text" />

    <Button
        android:id="@+id/dataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/emailEdit"
        android:onClick="data"
        android:text="@string/addstring" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastNameEdit"
        android:layout_below="@+id/lastNameEdit"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dataButton"
        android:layout_alignLeft="@+id/emailEdit"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/dataButton"
        android:onClick="deleteNow"
        android:text="@string/deletestring" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dataButton"
        android:layout_alignRight="@+id/dataButton"
        android:layout_below="@+id/dataButton"
        android:layout_marginTop="14dp"
        android:onClick="showTable"
        android:text="@string/recordstring" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/showButton"
        android:layout_alignLeft="@+id/DeleteButton"
        android:layout_alignRight="@+id/DeleteButton"
        android:layout_alignTop="@+id/showButton"
        android:onClick="showTable"
        android:text="@string/resetsr" />

</RelativeLayout>
